# galaxy-classifier

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: config.py  dependencies.py  main.py
app/api/handlers/: classify_galaxy_handler.py
app/api/routes/: classify_galaxy.py  healthcheck.py
app/dto/api_response/: galaxy_type.py
app/proxies/: tflow_serving_proxy.py
notebooks/: ModelBuilder.ipynb
notebooks/models/galaxy-classifier/1/: fingerprint.pb  keras_metadata.pb  saved_model.pb
notebooks/models/galaxy-classifier/1/variables/: variables.index
tests/: __init__.py  conftest.py
tests/functional/: test_classification.py  test_healthcheck.py
tests/unit/: test_galaxy_dto.py  test_galaxy_handler.py
