[tool.poetry]
name = "Galaxy Classifier App"
version = "0.1.0"
description = "A fun web app to clasify images of galaxies"
authors = ["Max Yarmakovich <maxyarmakovich@gmail.com>"]

[tool.poetry.dependencies]
python="^3.11"
fastapi = "^0.95.2"
toml = "^0.10.2"
uvicorn = "^0.22.0"
starlette-prometheus = "^0.9.0"
loguru = "^0.7.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"


[tool.poetry.group.eda.dependencies]
pandas = "^2.0.1"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
keras = "^2.12.0"
scikit-learn = "^1.2.2"

